[project]
name = "highjump-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noé Felber", email = "noe.felber@gmx.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
]

[project.scripts]
highjump-mlops = "highjump_mlops:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
